--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,14 @@ html {
 
 a:any-link {
 	text-decoration: none;
+	color: #b3b3ff;
 }
 
 body {
 	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 24px;
 	padding: 0.5rem;
 	font-weight: 300;
 	color: ghostwhite;
@@ -31,16 +35,16 @@ h1, h2 {
 	text-align: center;
 }
 
+p {
+	text-align: justify;
+	text-justify: auto;
+}
+
 code {
 	font-family: 'Courier New', Courier, monospace;
 }
 
 @media (max-width: 767px) {
-	body {
-		flex-direction: column;
-		justify-items: center;
-	}
-
 	#navbar {
 		width: 100%
 	}
@@ -51,13 +55,9 @@ code {
 }
 
 @media (min-width: 768px) {
-	body {
-		flex-direction: row;
-		justify-items: center;
-	}
-
 	#navbar {
 		width: 40%;
+		max-width: 400;
 	}
 
 	#main-doc {
